# fathogvideodetection

./: .gitignore
camera_test/: main.cpp
doc/: teoria.lyx
fast_example/: CMakeLists.txt  main.cpp
harris_example/: CMakeLists.txt  main.cpp
opencv_helloworld/: CMakeLists.txt
points_maching/: CMakeLists.txt  main.cpp
queue_roi/: CMakeLists.txt  main.cpp  queue_roi.cpp  queue_roi.h  queue_single_lane.cpp  queue_single_lane.h  queue_system.cpp  queue_system.h
queue_roi/processing/: frameImageProcessing.cpp  frameImageProcessing.h  queueROIPolygon.h
queue_roi/processing/lbp/: helper.h  lbp.cpp  lbp.h
video_queue/: frameImageProcessing.cpp  frameImageProcessing.h  globals.h  main.cpp  makefile  queue_roi.cpp  queue_single_lane.cpp  queue_single_lane.h  queue_system.cpp  svm_1050.txt
video_queue/car_analysis/: colourRecognition.cpp  typeRecognitionLBP.cpp  typeRecognitionLBP.h  vAnalysis.cpp  vAnalysis.h
video_queue/common/: edgeDetectionFPGA.cpp  edgeDetectionFPGA.h
video_queue/common_vdetect/: sequences.cpp
video_queue/vdl_system/: analyseCarPatch_day_zynq.cpp  analyseCarPatch_day_zynq.h  analyseCarPatch_night_zynq.cpp  analyseCarPatch_night_zynq.h  vdl.h
video_queue2/: CMakeLists.txt  analysis.txt  frameImageProcessing.cpp  globals.h  main.cpp  makefile  prof.txt  queue_demo.txt  queue_roi.cpp  queue_roi.h  queue_single_lane.cpp  queue_single_lane.h  queue_system.cpp  queue_system.h  seq_720.txt  svm_900.txt  vd_softModel.cbp  vd_softModel.depend  vd_softModel.layout  vd_softModel_queue_only.kdev4
video_queue2/car_analysis/: colourRecognition.cpp  colourRecognition.h  vAnalysis.cpp
video_queue2/colourModel/: colourNames.txt
video_queue2/common/: edgeDetectionFPGA.cpp
video_queue2/common_vdetect/: sequences.cpp  sequences.h
video_queue2/polygon/: Polygon.cpp  Polygon.h
video_queue2/vdl_system/: vdl.cpp  vdl_single_lane.cpp  vdl_single_lane.h  vdl_system.cpp  vdl_system.h
video_queue2/vdl_system_toDelete/: analyseCarPatch_day_zynq.cpp  analyseCarPatch_day_zynq.h  analyseCarPatch_night_zynq.cpp  analyseCarPatch_night_zynq.h  vdl.cpp  vdl.h  vdl_single_lane.cpp  vdl_single_lane.h  vdl_system.cpp  vdl_system.h
